[gd_scene load_steps=6 format=3 uid="uid://drb2imi4bsiwr"]

[ext_resource type="Script" uid="uid://b13xlfd7gugjq" path="res://components/ui_components/dialogue_popup/dialogue_popup.gd" id="1_8ngx0"]

[sub_resource type="Animation" id="Animation_oo74q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_a60j4"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_pgujl"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u3dc1"]
_data = {
&"RESET": SubResource("Animation_oo74q"),
&"fade_in": SubResource("Animation_a60j4"),
&"fade_out": SubResource("Animation_pgujl")
}

[node name="DialoguePopup" type="Label"]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.5
offset_top = -56.5
offset_right = 151.5
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Dialogue"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2
script = ExtResource("1_8ngx0")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="DisplayTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_u3dc1")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DisplayTimer" to="." method="_on_display_timer_timeout"]
